<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mountainMeadow"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context=".ReportActivity">


    <TextView
        android:id="@+id/ReportTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/report_an_issue"
        android:textSize="40sp"
        android:textColor="@color/platinum"/>

    <TextView
        android:id="@+id/information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/intro_report"
        android:textSize="25sp"
        android:textColor="@color/colorSplashText"/>

    <EditText
        android:id="@+id/buildingNum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/platinum"
        android:hint="@string/building_number"
        android:textColor="@color/platinum" />


    <EditText
        android:id="@+id/roomNum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/platinum"
        android:hint="@string/room_number"
        android:textColor="@color/platinum" />

    <EditText
        android:id="@+id/descrpition"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/platinum"
        android:gravity="top"
        android:hint="@string/give_a_detailed_description_of_the_room_issue"
        android:fitsSystemWindows="true"
        android:breakStrategy="balanced"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:padding="5dp"
        android:textColor="@color/platinum"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorTextView"
        android:elevation="4dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="Submit"
        android:onClick="onSubmit"/>


</LinearLayout>