<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mountainMeadow"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/prIconImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:contentDescription="@null"
        android:src="@drawable/pricon" />

    <AbsoluteLayout
        android:id="@id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible">
        <ImageView
            android:id="@+id/guideline"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:visibility="visible"
            android:layout_x="50px"
            android:layout_y="100px"
            android:src="@drawable/pricon"/>
    </AbsoluteLayout>

    <ProgressBar
        android:id="@+id/loadingProgressBarHorizontal"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-4dp"
        android:foregroundGravity="bottom"
        android:indeterminate="true"
        android:padding="0dp"
        android:theme="@style/ProgressBarStyle" />

    <RelativeLayout
        android:id="@+id/afterAnimationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        android:layout_below="@id/guideline"
        android:visibility="gone">

        <TextView
            android:id="@+id/WelcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/polyrooms"
            android:textColor="@color/colorSplashText"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reserveTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/WelcomeTextView"
            android:text="@string/reserve_a_room"
            android:textColor="@color/platinum"
            android:textSize="15sp" />

        <TextView
                android:id="@+id/reservationsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reserveTextView"
                android:layout_marginTop="20dp"
                android:text="@string/current_reservations"
                android:textColor="@color/platinum"
                android:textSize="20dp" />

        <RelativeLayout
            android:id="@+id/reservationsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reservationsText"
            android:visibility="visible"
            android:layout_marginTop="5dp"
            android:background="@drawable/reservation_background"
            android:onClick="clickReservation">

            <LinearLayout
                android:id="@+id/buildingInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/buildingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Building: "
                    android:textColor="@color/mountainMeadow"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/buildingNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="null"
                    android:textColor="@color/mountainMeadow"
                    android:textSize="18sp"
                    android:textStyle="italic"/>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/roomCap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/buildingInfo">
                <LinearLayout
                    android:id="@+id/roomInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start">
                    <TextView
                        android:id="@+id/roomText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Room: "
                        android:textColor="@color/mountainMeadow"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/roomNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="null"
                        android:textColor="@color/mountainMeadow"
                        android:textSize="18sp"
                        android:textStyle="italic"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/capacityInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end">

                    <TextView
                        android:id="@+id/capacityText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Capacity: "
                        android:textColor="@color/mountainMeadow"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/capacity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/mountainMeadow"
                        android:textSize="18sp" />



                </LinearLayout>
            </FrameLayout>


            <FrameLayout
                android:id="@+id/startEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/roomCap">

                <LinearLayout
                    android:id="@+id/startInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/startText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Start Time: "
                        android:textColor="@color/mountainMeadow"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/startTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00:00"
                        android:textColor="@color/mountainMeadow"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/endInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end">

                    <TextView
                        android:id="@+id/endText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="End Time: "
                        android:layout_gravity="end"
                        android:textColor="@color/mountainMeadow"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/endTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00:00"
                        android:textColor="@color/mountainMeadow"
                        android:textSize="18sp" />

                </LinearLayout>


            </FrameLayout>

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/findButton"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/timeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_a_time"
                android:textColor="@color/colorTextView"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp"
                android:onClick="clickTimePicker"/>

            <Button
                android:id="@+id/dateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/select_a_date"
                android:textColor="@color/colorTextView"
                android:textColorHint="@color/colorAccent"
                android:onClick="clickDate"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/findButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_above="@+id/reportButton"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_drawable"
            android:text="@string/find_a_room"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:onClick="clickFind"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/reportButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="clickReport"
            android:padding="12dp"
            android:text="@string/report_an_issue"
            android:textColor="@color/platinum"
            android:textSize="15sp" />


    </RelativeLayout>

</RelativeLayout>
